--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
     "version": 2,
+    "name": "server",
     "builds": [
         {
-            "src": "api/index.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "api/index.js"
+            "dest": "/index.js"
         }
     ]
 }
